change error to fiber.error
