# internal/handler/controller/user.go
@@ -4,9 +4,9 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/mariojuzar/go-user-auth/internal/handler/request"
 	"github.com/mariojuzar/go-user-auth/internal/handler/response"
-	"github.com/mariojuzar/go-user-auth/pkg/custerr"
 	"github.com/mariojuzar/go-user-auth/pkg/utils"
 	"go.mongodb.org/mongo-driver/bson/primitive"
+	"net/http"
 	"strconv"
 )
 
@@ -19,15 +19,15 @@ import (
 // @Param		user_id		path	string		true 	"user id"
 // @Produce 	json
 // @Success		200	{object} 	response.BaseResponse{data=response.UserResponse}
-// @Router		/v1/users/user/:user_id	[get]
+// @Router		/v1/users/user/{user_id}	[get]
 func (a *API) FindUserById(ctx *fiber.Ctx) error {
 	var id primitive.ObjectID
 	userIdStr := ctx.Params("user_id")
 	id, err := primitive.ObjectIDFromHex(userIdStr)
 	if err != nil {
-		return &custerr.CustomError{
-			Err:     err,
-			ErrCode: 400,
+		return &fiber.Error{
+			Message: err.Error(),
+			Code:    http.StatusBadRequest,
 		}
 	}
 	result, err := a.userUc.FindById(ctx.Context(), id)
@@ -56,9 +56,9 @@ func (a *API) FindMyUser(ctx *fiber.Ctx) error {
 	}
 	id, err = primitive.ObjectIDFromHex(jwtData.UserId)
 	if err != nil {
-		return &custerr.CustomError{
-			Err:     err,
-			ErrCode: 400,
+		return &fiber.Error{
+			Message: err.Error(),
+			Code:    http.StatusBadRequest,
 		}
 	}
 	result, err := a.userUc.FindById(ctx.Context(), id)
@@ -115,9 +115,9 @@ func (a *API) CreateUser(ctx *fiber.Ctx) error {
 	var req request.UserCreateRequest
 	err := ctx.BodyParser(&req)
 	if err != nil {
-		return &custerr.CustomError{
-			Err:     err,
-			ErrCode: 400,
+		return &fiber.Error{
+			Message: err.Error(),
+			Code:    http.StatusBadRequest,
 		}
 	}
 
@@ -143,9 +143,9 @@ func (a *API) UpdateUser(ctx *fiber.Ctx) error {
 	var req request.UserUpdateRequest
 	err := ctx.BodyParser(&req)
 	if err != nil {
-		return &custerr.CustomError{
-			Err:     err,
-			ErrCode: 400,
+		return &fiber.Error{
+			Message: err.Error(),
+			Code:    http.StatusBadRequest,
 		}
 	}
 
@@ -166,15 +166,15 @@ func (a *API) UpdateUser(ctx *fiber.Ctx) error {
 // @Param		user_id		path	string		true 	"user id"
 // @Produce 	json
 // @Success		200	{object} 	response.BaseResponse{}
-// @Router		/v1/users/:user_id	[delete]
+// @Router		/v1/users/{user_id}	[delete]
 func (a *API) DeleteUser(ctx *fiber.Ctx) error {
 	var id primitive.ObjectID
 	userIdStr := ctx.Params("user_id")
 	id, err := primitive.ObjectIDFromHex(userIdStr)
 	if err != nil {
-		return &custerr.CustomError{
-			Err:     err,
-			ErrCode: 400,
+		return &fiber.Error{
+			Message: err.Error(),
+			Code:    http.StatusBadRequest,
 		}
 	}
 
